# TCAV

./: .gitignore  README.md  REPRODUCIBILITY.md  myeloma_mechanistic_dynamic_interpretability_final.ipynb  pyproject.toml  requirements-frozen.txt  requirements-lock.txt  requirements.txt  tcav.ipynb
dr_tabpfn_mechanistic_interpretability/: __init__.py
notebooks/: tcav_refactored.ipynb  tutorial_tabpfn_tcav.ipynb
renal_framework/: README.md  demo.ipynb  pyproject.toml  requirements.txt  run.py
renal_framework/configs/: base.yaml  tabpfn_experiments.yaml  ts_experiments.yaml
renal_framework/src/: __init__.py  config.py  io_utils.py  logging_utils.py  metrics.py  plotting.py  splits.py
renal_framework/src/tabpfn_pipeline/: __init__.py  ace.py  concept_learning.py  embedding.py  evaluation.py  phenotype.py  preprocessing.py  reporting.py  rules.py  tcav.py
renal_framework/src/ts_pipeline/: ccta.py  cctsi.py  datasets.py  evaluation.py  hidden_states.py  interpretability.py  models.py  models_v2.py  preprocessing.py  temporal_tcav.py  temporal_tcav_io.py  training.py
renal_framework/tests/: test_metrics.py  test_splits.py
src/: __init__.py  config.py
src/concepts/: __init__.py  cav.py  surrogate.py  tcav.py  tcav_gradient.py  tcav_wrapper.py
src/data/: ingestion.py  preprocessing.py  walk_forward.py
src/embeddings/: __init__.py  clustering.py  extractor.py
src/modeling/: __init__.py  inference.py  tabpfn_loader.py  tabpfn_trainer.py
src/pipelines/: __init__.py  full_tcav.py
src/reporting/: __init__.py  tcav_summary.py
src/utils/: __init__.py  io.py  logging.py  torch_helpers.py
tabpfn_free_light_chain_results/: scaler_standard.pkl
