[project]
name = "dr-tabpfn-mechanistic-interpretability"
version = "0.1.0"
description = "TCAV-based mechanistic interpretability for predictions made by Drift-Resilient TabPFN"
requires-python = ">=3.10,<3.11"
dependencies = [
    # --- Core ML / DL ---
    "torch==2.1.2",
    "torchvision==0.16.2",
    "torchmetrics==1.2.0",
    "lightgbm==3.3.5",
    "scikit-learn==1.5.2",
    "xgboost==3.1.3",

    # --- TabPFN (installed from GitHub) ---
    "drift-resilient-tabpfn @ git+https://github.com/automl/Drift-Resilient_TabPFN.git@a6e75afb82d13e7abb46deade3669c4106b3d636",
    "tabpfn-common-utils==0.2.14",

    # --- Data / numerics ---
    "numpy==1.26.4",
    "pandas==2.3.3",
    "scipy==1.15.3",
    "joblib==1.5.3",

    # --- Visualization ---
    "matplotlib==3.10.8",
    "seaborn==0.12.2",
    "plotly==6.5.2",

    # --- Interpretability ---
    "shap==0.49.1",

    # --- Utilities ---
    "tqdm==4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
